; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_ble_storage.c__btc_storage_remove_ble_dev_auth_mode.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_ble_storage.c__btc_storage_remove_ble_dev_auth_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTC_BLE_STORAGE_LE_AUTH_MODE_STR = common dso_local global i32 0, align 4
@BT_STATUS_SUCCESS = common dso_local global i32 0, align 4
@BT_STATUS_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @_btc_storage_remove_ble_dev_auth_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_btc_storage_remove_ble_dev_auth_mode(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 1, i32* %6, align 4
  store i64 0, i64* %8, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @bdaddr_to_string(i32* %9, i32 %10, i32 4)
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @BTC_BLE_STORAGE_LE_AUTH_MODE_STR, align 4
  %14 = bitcast i64* %8 to i32*
  %15 = call i32 @btc_config_get_int(i32 %12, i32 %13, i32* %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @BT_STATUS_SUCCESS, align 4
  store i32 %19, i32* %3, align 4
  br label %35

20:                                               ; preds = %2
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @BTC_BLE_STORAGE_LE_AUTH_MODE_STR, align 4
  %23 = call i32 @btc_config_remove(i32 %21, i32 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %20
  %27 = load i32, i32* @BT_STATUS_FAIL, align 4
  store i32 %27, i32* %3, align 4
  br label %35

28:                                               ; preds = %20
  %29 = load i32, i32* %5, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %28
  %32 = call i32 (...) @_btc_storage_save()
  br label %33

33:                                               ; preds = %31, %28
  %34 = load i32, i32* @BT_STATUS_SUCCESS, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %33, %26, %18
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @bdaddr_to_string(i32*, i32, i32) #1

declare dso_local i32 @btc_config_get_int(i32, i32, i32*) #1

declare dso_local i32 @btc_config_remove(i32, i32) #1

declare dso_local i32 @_btc_storage_save(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
